# hiro-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  security.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  publish.yml
.hiro/hooks/: enforce_code_review.py  enforce_plan_review.py
docs/: architecture.md  configuration.md  development.md  scan-methodology.md  troubleshooting.md
src/hiro_agent/: __init__.py  _common.py  chat.py  cli.py  prompts.py  review_code.py  review_infra.py  review_plan.py  review_store.py  scan.py  scan_display.py  scope_gating.py  setup_hooks.py  upload_review.py
src/hiro_agent/hooks/: enforce_code_review.py  enforce_plan_review.py
src/hiro_agent/skills/: __init__.py  auth.md  cicd.md  crypto.md  error-handling.md  infra.md  injection.md  logic.md  secrets.md  sensitive-logging.md
tests/: test_chat.py  test_cli.py  test_common.py  test_prompts.py  test_review_code.py  test_review_infra.py  test_review_plan.py  test_scan.py  test_scope_gating.py  test_setup_hooks.py
